# decree-python

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
examples/: .gitignore  Makefile  README.md  requirements.txt  setup.py
examples/async-client/: README.md  main.py  test_async_client.py
examples/error-handling/: README.md  main.py  test_error_handling.py
examples/fastapi-integration/: README.md  main.py
examples/live-config/: README.md  main.py
examples/quickstart/: README.md  main.py  test_quickstart.py
sdk/: README.md  pyproject.toml
sdk/docs/: async.md  configuration.md  quickstart.md  watching.md
sdk/src/opendecree/: __init__.py  _channel.py  _compat.py  _convert.py  _interceptors.py  _retry.py  _stubs.py  async_client.py  async_watcher.py  client.py  errors.py  types.py  watcher.py
sdk/src/opendecree/_generated/: __init__.py
sdk/src/opendecree/_generated/centralconfig/v1/: audit_service_pb2.py  audit_service_pb2.pyi  audit_service_pb2_grpc.py  audit_service_pb2_grpc.pyi  config_service_pb2.py  config_service_pb2.pyi  config_service_pb2_grpc.py  config_service_pb2_grpc.pyi  schema_service_pb2.py  schema_service_pb2.pyi  schema_service_pb2_grpc.py  schema_service_pb2_grpc.pyi  types_pb2.py  types_pb2.pyi  types_pb2_grpc.py  types_pb2_grpc.pyi  version_service_pb2.py  version_service_pb2.pyi  version_service_pb2_grpc.py  version_service_pb2_grpc.pyi
sdk/tests/: conftest.py  test_async_client.py  test_async_watcher.py  test_channel.py  test_client.py  test_compat.py  test_convert.py  test_errors.py  test_interceptors.py  test_retry.py  test_types.py  test_version.py  test_watcher.py
